--- a/data_files/Makefile
+++ b/data_files/Makefile
@@ -1,20 +1,23 @@
-CC=gcc
-CFLAGS=-O3
-LDFLAGS=-lc -lm
+CFLAGS = -O3 -I../.. -Wall
+LDFLAGS =
+
 EXEC=bmptoh
 
 all: $(EXEC)
 
-bmptoh: pack.o lzw.o bmptoh.o
+bmptoh: bmptoh.o lzw.o pack.o rle.o
 	$(CC) -o $@    $^ $(LDFLAGS)
 
 bmptoh.o: bmptoh.c
 	$(CC) -o $@ -c $< $(CFLAGS)
 
-pack.o: ../packer/pack.c ../packer/pack.h
+lzw.o: ../mi_pack/lzw.c
 	$(CC) -o $@ -c $< $(CFLAGS)
 
-lzw.o: ../packer/lzw.c ../packer/lzw.h
+pack.o: ../mi_pack/pack.c
+	$(CC) -o $@ -c $< $(CFLAGS)
+
+rle.o: ../mi_pack/rle.c
 	$(CC) -o $@ -c $< $(CFLAGS)
 
 clean:
@@ -22,5 +25,8 @@ clean:
 
 mrproper: clean
 	rm -rf $(EXEC)
+	rm -rf Debug*
+	rm -rf Release*
+	rm -rf *.obj *.ncb *.plg *.opt
 
 .PHONY: clean mrproper
